wip with openapi spec
